// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`delete > delete 1`] = `
"DELETE FROM user
WHERE id IS NULL"
`;

exports[`delete > deleteWithResult 1`] = `
"DELETE FROM user
RETURNING *"
`;

exports[`delete > deleteWithResult 2`] = `
"DELETE FROM user
RETURNING rename AS level,name"
`;

exports[`insert > insert 1`] = `
"INSERT INTO user (name,level)
VALUES
('张三',8),
('王五',9)"
`;

exports[`insert > insert 2`] = `
"INSERT INTO user(name)
VALUES('张三')"
`;

exports[`insert > insert-conflict > m 1`] = `
"INSERT INTO user(name)
VALUES('张三')
ON CONFLICT (id,level)
DO UPDATE SET
level= 89,name= 11"
`;

exports[`insert > insert-conflict > m 2`] = `
"INSERT INTO user(name)
VALUES('张三')
ON CONFLICT (id,level)DO UPDATE SET level=89, name='11'"
`;

exports[`insert > insert-returning 1`] = `
"INSERT INTO user (name)
VALUES
('hh')
RETURNING rename AS level,name"
`;

exports[`select > select-columns 1`] = `
"SELECT *
FROM user"
`;

exports[`select > select-columns 2`] = `
"SELECT name,level AS rename_level,id AS id
FROM user"
`;

exports[`select > select-where-order-limit 1`] = `
"SELECT *
FROM user
WHERE limit IS NULL
ORDER BY id ASC NULLS FIRST
LIMIT 100
OFFSET 23"
`;

exports[`update > update 1`] = `
"UPDATE user SET
level=1
WHERE id IS NULL"
`;

exports[`updateFrom > update-base 1`] = `
"UPDATE user SET
id= 78
WHERE id IS NULL"
`;

exports[`updateFrom > update-returning 1`] = `
"UPDATE user SET
id= 78
RETURNING rename AS level,name"
`;
